# 3D_eye_detectiion

./: .gitignore  DEPLOYMENT.md  README.md  STARTUP.md  TIMING_PROFILING.md  start_eye_tracking.sh  项目说明文档.md
.claude/skills/project-context/: SKILL.md
.claude/skills/project-context/references/: body-detection.md  eye-3d-positions.md  eye-positions.md  face-landmarks.md  ir-stream.md
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md
OrbbecSDK_ROS2/: README_CN.MD
OrbbecSDK_ROS2/.serena/: project.yml
OrbbecSDK_ROS2/doc/: ARCHITECTURE_REVIEW.md  PROJECT_ANALYSIS.md  README.MD
OrbbecSDK_ROS2/orbbec_camera/: CMakeLists.txt  package.xml
OrbbecSDK_ROS2/orbbec_camera/config/: camera_params.yaml
OrbbecSDK_ROS2/orbbec_camera/examples/multi_camera_synced_verification_tool/multicamera_sync/Python/: Config.ini  README.md  SyncFramesMain.py
OrbbecSDK_ROS2/orbbec_camera/examples/multi_camera_synced_verification_tool/multicamera_sync/Python/script/: config_frameMatch-Astra2_new.py  config_frameMatch-systemTimestamp.py  config_frameMatch.py  config_frameMatch_Gemini2VL.py  config_frameMatch_g330.py
OrbbecSDK_ROS2/orbbec_camera/include/orbbec_camera/: constants.h  ob_camera_node.h
OrbbecSDK_ROS2/orbbec_camera/launch/: astra.launch.py  astra2.launch.py  dabai_a.launch.py  dabai_dcw2.launch.py  dabai_max_pro.launch.py  femto.launch.py  femto_bolt.launch.py  femto_mega.launch.py  gemini2.launch.py  gemini210.launch.py  gemini2L.launch.py  gemini345.launch.py  gemini345_lg.launch.py  gemini_330_series.launch.py  gemini_330_series_low_cpu.launch.py  gemini_335L.launch.py  gemini_intra_process_demo_launch.py  multi_camera.launch.py
OrbbecSDK_ROS2/orbbec_camera/src/: ob_camera_node.cpp  ob_camera_node_driver.cpp  ob_lidar_node.cpp  ros_service.cpp
OrbbecSDK_ROS2/orbbec_camera/tools/: list_camera_profile.cpp
OrbbecSDK_ROS2/orbbec_camera_msgs/: package.xml
OrbbecSDK_ROS2/orbbec_camera_msgs/msg/: DeviceInfo.msg
OrbbecSDK_ROS2/orbbec_description/: package.xml
OrbbecSDK_ROS2/orbbec_description/urdf/: astra2.urdf.xacro  gemini2.urdf.xacro  gemini2L.urdf.xacro  gemini335L_336L.urdf.xacro
doc/: DEPLOYMENT.md  部署方案.md  项目流程.md
docs/: SYSTEM_REPORT.md
eye_position_3d/: CMakeLists.txt  package.xml
eye_position_3d/include/: eye_position_3d_node.h
eye_position_3d/launch/: eye_position_3d.launch.py
eye_position_3d/msg/: EyePositions3D.msg
eye_position_3d/src/: eye_position_3d_node.cpp  main.cpp
eye_position_publisher/: CMakeLists.txt  package.xml
eye_position_publisher/include/: eye_position_publisher_node.h
eye_position_publisher/launch/: eye_position_publisher.launch.py
eye_position_publisher/msg/: EyePositions.msg
eye_position_publisher/src/: eye_position_publisher_node.cpp  main.cpp
eye_tracking/: CMakeLists.txt  package.xml
eye_tracking/config/: stereo_calibration.json
eye_tracking/include/eye_tracking/: eye_position_2d_node.h  eye_position_3d_node.h  eye_visualization_node.h
eye_tracking/launch/: eye_tracking.launch.py  eye_tracking_full.launch.py  test_left_only.launch.py
eye_tracking/src/: eye_position_2d_node.cpp  eye_position_3d_node.cpp  eye_tracking_main.cpp  eye_visualization_node.cpp  main.cpp
eye_tracking_msgs/: CMakeLists.txt  package.xml
eye_tracking_msgs/msg/: EyePosition2D.msg  EyePosition3D.msg  EyePositions2D.msg  EyePositions3D.msg
face_landmarks_detection/: CMakeLists.txt  PROJECT_ANALYSIS.md  README.md  README_CN.md  package.xml
face_landmarks_detection/.serena/: project.yml
face_landmarks_detection/config/: pipeline_params.yaml
face_landmarks_detection/doc/: 技术说明文档.md
face_landmarks_detection/include/: ai_msg_manage.h  face_landmarks_det_node.h  face_landmarks_det_output_parser.h  img_convert_utils.h  roi_cache.h
face_landmarks_detection/launch/: body_det_face_landmarks_det_fb.launch.py  face_landmarks_det_node.launch.py  face_pipeline.launch.py
face_landmarks_detection/src/: ai_msg_manage.cpp  face_landmarks_det_node.cpp  face_landmarks_det_output_parser.cpp  img_convert_utils.cpp  main.cpp  roi_cache.cpp
img_format_converter/: CMakeLists.txt  package.xml
img_format_converter/include/: img_format_converter_node.h
img_format_converter/launch/: img_format_converter.launch.py
img_format_converter/src/: img_format_converter_node.cpp  main.cpp
mono2d_body_detection/: CHANGELOG.md  CMakeLists.txt  PROJECT_ANALYSIS.md  README.md  README_cn.md  package.xml
mono2d_body_detection/.serena/: project.yml
mono2d_body_detection/doc/: DEPLOYMENT_GUIDE.md  技术说明文档.md
mono2d_body_detection/include/: mono2d_body_det_node.h
mono2d_body_detection/include/post_process/: yolo_pose_parser.h
mono2d_body_detection/launch/: mono2d_body_detection.launch.py  mono2d_body_detection_without_camera.launch.py
mono2d_body_detection/src/: main.cpp  mono2d_body_det_node.cpp
mono2d_body_detection/src/post_process/: yolo_pose_parser.cpp
mono8_to_nv12/: CMakeLists.txt  package.xml
mono8_to_nv12/include/mono8_to_nv12/: mono8_to_nv12_node.h
mono8_to_nv12/launch/: mono8_to_nv12.launch.py
mono8_to_nv12/src/: main.cpp  mono8_to_nv12_node.cpp
scripts/: start_eye_tracking.sh
tcl_eye_tracking_bringup/: CMakeLists.txt  package.xml
tcl_eye_tracking_bringup/config/: fastdds_no_shm.xml  fastdds_shm.xml
tcl_eye_tracking_bringup/launch/: bringup.launch.py
